section-31-Ingress-Controllers/services.yaml
# Service WEBAPP
apiVersion: v1
kind: Service
metadata:
  name: fleet-webapp
  labels:
    app: webapp
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080

---
# Service QUEUE
apiVersion: v1

kind: Service

metadata:
  name: fleetman-queue

spec:
  type: NodePort

  selector:
    app: queue
  
  ports:
    - name: http
      port: 8161
      targetPort: 8161
      nodePort: 30010

    - name: endpoint
      port: 61616
      targetPort: 61616

---
# Service POSITION TRACKER
apiVersion: v1

kind: Service

metadata:
  name: fleetman-position-tracker

spec:
  type: ClusterIP

  selector:
    app: position-tracker
  
  ports:
    - name: http
      port: 8080
      targetPort: 8080


---
# Service API GATEWAY
apiVersion: v1

kind: Service

metadata:
  name: fleetman-api-gateway

spec:
  type: ClusterIP

  selector:
    app: api-gateway
  
  ports:
    - name: http
      port: 8080
      targetPort: 8080
