section-31-Ingress-Controllers/ingress-public.yaml
# from v1.14 of k8s
# apiVersion: networking.k8s.io/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-routing
spec:
  rules:
    - host: fleetman.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fleet-webapp
                port: 
                  number: 80
