section-31-Ingress-Controllers/ingress-secret-file.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: secure-routing
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'

spec:
  rules:
    - host: queue.fleetman.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fleetman-queue
                port: 
                  number: 8161
